# dns-proxy

./: .gitignore  CMakeLists.txt  README.md  dns.cpp  dns.h  dpdk_addons.cpp  dpdk_addons.h  main.c  main.cpp  packet_builder.cpp  packet_builder.h  tld.txt
doc/: main.tex
testing/: generate_bind_config.py  generate_invalid_tlds.py  test.rspec
